IVYPORTAL-9147: Various or urgent requests in IVYPORTAL S184 - Fixed button alignment in task template - stretch length of top line bars

--- a/AxonIvyPortal/PortalStyle/webContent/resources/sass/overrides/_theme_styles.scss
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/sass/overrides/_theme_styles.scss
@@ -619,7 +619,7 @@ body .ui-tabs .ui-tabs-nav>li.ui-state-default:not(.ui-state-active) a {
 }
 
 .layout-wrapper .layout-main .layout-content {
-    padding: 60px 30px 0 30px;
+    padding: 60px 20px 0 30px;
     height: 100vh;
     overflow-x: hidden;
 }
